NgRx basic implementation

--- a/libs/todos-app/feature-todos/src/lib/todos/todos.component.html
+++ b/libs/todos-app/feature-todos/src/lib/todos/todos.component.html
@@ -1,2 +1,4 @@
 <button id="add-todo" (click)="addTodo()">Add Todo</button>
-<todos-workspace-todos-list [todos]="todos"></todos-workspace-todos-list>
+<todos-workspace-todos-list
+  [todos]="todos$ | async"
+></todos-workspace-todos-list>
