--- a/libs/todos-app/ui-todo-form/src/lib/todo-form/todo-form.component.html
+++ b/libs/todos-app/ui-todo-form/src/lib/todo-form/todo-form.component.html
@@ -4,3 +4,10 @@
   (keyup.enter)="updateTitle($event)"
   (blur)="updateTitle($event)"
 />
+
+<!-- <textarea
+  cdkTextareaAutosize
+  [formControl]="todoTitleControl"
+  (keyup.enter)="updateTitle($event)"
+  (blur)="updateTitle($event)"
+></textarea> -->
