--- a/libs/todos-app/ui-todos-list/src/lib/todos-list/todos-list.component.html
+++ b/libs/todos-app/ui-todos-list/src/lib/todos-list/todos-list.component.html
@@ -1,17 +1,66 @@
 <mat-list>
   <mat-list-item *ngFor="let todo of todos">
-    <span matLine>
-      &nbsp;
-      <mat-checkbox></mat-checkbox>
-      &nbsp;
-      <todos-workspace-todo-form
-        [todo]="todo"
-        (emitTodoUpdate)="onTodoUpdate($event)"
-      ></todos-workspace-todo-form>
-    </span>
+    <!-- <div matLine> -->
+    <mat-checkbox style="margin-right: 1rem"></mat-checkbox>
+    <todos-workspace-todo-form
+      [todo]="todo"
+      (emitTodoUpdate)="onTodoUpdate($event)"
+    ></todos-workspace-todo-form>
+    <!-- </div> -->
+    <button mat-icon-button>
+      <mat-icon>edit</mat-icon>
+    </button>
     <button mat-icon-button (click)="onTodoDelete(todo.id)">
       <mat-icon>delete</mat-icon>
     </button>
     <mat-divider [inset]="true"></mat-divider>
   </mat-list-item>
 </mat-list>
+
+<!-- <div class="mdc-layout-grid">
+  <div class="mdc-layout-grid__inner">
+    <mat-list>
+      <mat-list-item *ngFor="let todo of todos">
+        <div class="mdc-layout-grid__cell">
+          <mat-checkbox></mat-checkbox>
+        </div>
+        <div class="mdc-layout-grid__cell">
+          <todos-workspace-todo-form
+            [todo]="todo"
+            (emitTodoUpdate)="onTodoUpdate($event)"
+          ></todos-workspace-todo-form>
+        </div>
+        <div class="mdc-layout-grid__cell">
+          <button mat-icon-button (click)="onTodoDelete(todo.id)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
+        <mat-divider [inset]="true"></mat-divider>
+      </mat-list-item>
+    </mat-list>
+  </div>
+</div> -->
+
+<!-- <mat-list>
+  <mat-list-item *ngFor="let todo of todos">
+    <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--align-middle">
+          <mat-checkbox></mat-checkbox>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--align-middle">
+          <todos-workspace-todo-form
+            [todo]="todo"
+            (emitTodoUpdate)="onTodoUpdate($event)"
+          ></todos-workspace-todo-form>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--align-middle">
+          <button mat-icon-button (click)="onTodoDelete(todo.id)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
+      </div>
+    </div>
+    <mat-divider [inset]="true"></mat-divider>
+  </mat-list-item>
+</mat-list> -->
