--- a/libs/todos-app/feature-todos/src/lib/todos/todos.component.html
+++ b/libs/todos-app/feature-todos/src/lib/todos/todos.component.html
@@ -1,3 +1,4 @@
+<todos-workspace-todos-header></todos-workspace-todos-header>
 <div class="mdc-layout-grid">
   <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell--span-12">
