--- a/libs/todos-app/feature-todo-detail/src/lib/todo-detail/todo-detail.component.html
+++ b/libs/todos-app/feature-todo-detail/src/lib/todo-detail/todo-detail.component.html
@@ -2,6 +2,9 @@
   (emitNavigateToTodos)="onNavigateToTodos()"
   (emitTodoAndTodoDetailDelete)="onTodoAndTodoDetailDelete()"
 ></todos-workspace-todo-detail-header>
+<todos-workspace-loading-indicator
+  [loading]="loading"
+></todos-workspace-loading-indicator>
 <ng-container *ngIf="todoDetail$ | async as todoDetail">
   <todos-workspace-todo-detail-form
     [todoDetail]="todoDetail"
