--- a/libs/todos-app/feature-todos/src/lib/todos/todos.component.html
+++ b/libs/todos-app/feature-todos/src/lib/todos/todos.component.html
@@ -1,4 +1,7 @@
 <todos-workspace-todos-header></todos-workspace-todos-header>
+<todos-workspace-loading-indicator
+  [loading]="loading"
+></todos-workspace-loading-indicator>
 <div class="mdc-layout-grid">
   <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell--span-12">
