--- a/libs/todos-app/ui-todo-detail-header/src/lib/todo-detail-header/todo-detail-header.component.html
+++ b/libs/todos-app/ui-todo-detail-header/src/lib/todo-detail-header/todo-detail-header.component.html
@@ -1,9 +1,10 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button (click)="onNavigateToTodos()">
+  <!-- <button mat-icon-button (click)="onNavigateToTodos()">
     <mat-icon>arrow_back</mat-icon>
   </button>
   <span class="spacer"></span>
   <button mat-icon-button (click)="onTodoAndTodoDetailDelete()">
     <mat-icon>delete</mat-icon>
-  </button>
+  </button> -->
+  <ng-content></ng-content>
 </mat-toolbar>
