--- a/libs/todos-app/ui-todo-detail-form/src/lib/todo-detail-form/todo-detail-form.component.html
+++ b/libs/todos-app/ui-todo-detail-form/src/lib/todo-detail-form/todo-detail-form.component.html
@@ -25,6 +25,9 @@
           </textarea>
         </mat-form-field>
       </div>
+      <div class="mdc-layout-grid__cell--span-12">
+        <mat-checkbox formControlName="completed">Completed</mat-checkbox>
+      </div>
     </div>
   </div>
 </form>
