--- a/libs/todos-app/feature-todos/src/lib/todos/todos.component.html
+++ b/libs/todos-app/feature-todos/src/lib/todos/todos.component.html
@@ -21,6 +21,7 @@
   <todos-workspace-todos-list
     [todos]="todos"
     (emitTodoUpdate)="onTodoUpdate($event)"
+    (emitTodosUpdate)="onTodosUpdate($event)"
     (emitTodoDelete)="onTodoDelete($event)"
     (emitTodoDetailEdit)="navigateToDetail($event)"
   ></todos-workspace-todos-list>
